; ModuleID = '/home/carl/AnghaBench/netdata/database/extr_rrdhost.c___rrd_check_wrlock.c'
source_filename = "/home/carl/AnghaBench/netdata/database/extr_rrdhost.c___rrd_check_wrlock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@D_RRDHOST = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"Checking write lock on all RRDs\00", align 1
@rrd_rwlock = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [87 x i8] c"RRDs should be write-locked, but it are not, at function %s() at line %lu of file '%s'\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__rrd_check_wrlock(i8* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i32, i32* @D_RRDHOST, align 4
  %9 = call i32 @debug(i32 %8, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0))
  %10 = call i32 @netdata_rwlock_tryrdlock(i32* @rrd_rwlock)
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* %7, align 4
  %12 = icmp eq i32 %11, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %3
  %14 = load i8*, i8** %5, align 8
  %15 = load i64, i64* %6, align 8
  %16 = load i8*, i8** %4, align 8
  %17 = call i32 @fatal(i8* getelementptr inbounds ([87 x i8], [87 x i8]* @.str.1, i64 0, i64 0), i8* %14, i64 %15, i8* %16)
  br label %18

18:                                               ; preds = %13, %3
  ret void
}

declare dso_local i32 @debug(i32, i8*) #1

declare dso_local i32 @netdata_rwlock_tryrdlock(i32*) #1

declare dso_local i32 @fatal(i8*, i8*, i64, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
